@@ -269,6 +269,7 @@ public class Window extends Table {
 	}
 
 	public Actor hit (float x, float y, boolean touchable) {
+		if (!isVisible()) return null;
 		Actor hit = super.hit(x, y, touchable);
 		if (hit == null && isModal && (!touchable || getTouchable() == Touchable.enabled)) return this;
 		float height = getHeight();
